kubernetes-101/manifests/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: codefreeze
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
      ports:
        - containerPort: 80
