kubernetes-101/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: codefreeze
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: nginx.twaslowski.com
      http:
        paths:
          - backend:
              service:
                name: nginx-service
                port:
                  number: 80
            path: /
            pathType: Prefix
